Slight fix to overflow ui

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@ body {
 .list-wrapper {
   background-color: #1B4332;
   border-radius: 10px;
-  width: 275px;
+  width: 300px;
   height: 100%;
   box-shadow: #122c21;
 }
