--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -4,10 +4,10 @@
   justify-content: center;
   background-color: #2D6A4F;
   margin: 5px;
-  padding: 8px;
+  padding: 4px;
   border-radius: 5px;
   color: white;
-  height: 25px;
+  height: fit-content;
 }
 
 .task-list {
@@ -19,6 +19,7 @@
 }
 
 .task-bar {
+  height: fit-content;
   display: flex;
   background-color: #2D6A4F;
   align-items: center;
@@ -33,6 +34,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 5px;
+  height: fit-content;
 }
 
 .task-name {
@@ -60,19 +62,20 @@
   border: none;
   color: white;
   outline: none;
-  overflow-x: auto;
+  overflow-wrap: break-word;
   white-space: nowrap;
 }
 
 .task-date-edit {
   margin-left: auto;
-  width: 50px;
+  width: 25px;
   font-size: 0.7rem;
   padding: 4px;
   background: transparent;
-  border: 1px solid #888;
-  border-radius: 4px;
+  border: none;
   color: white;
+  height: auto;
+
 }
 
 .done-task {
